--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>vue-cli-template</title>
+    <title>Vue CLI Template</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-cli-template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>You'll need to enable JavaScript for this webiste to work properly.</strong>
     </noscript>
     <div id="app"></div>
   </body>
